<resources>
    <string name="app_name">AppInfos</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>

    <string name="search">搜索</string>
    <string name="setting">设置</string>

    <string name="system_app">系统应用</string>
    <string name="my_app">我的应用</string>

    <string name="data_error">数据出错!</string>
    <string name="search_error">搜索出错!</string>

    <string name="copy">复制</string>
    <string name="copy_tip">内容已复制到剪贴板</string>
    <string name="share">分享</string>

    <string name="share_url">http://fir.im/szl7</string>
    <string name="share_content">我在使用 Appinfos 查看手机的应用，你也来试试吧!</string>
    <string name="share_canceled">分享取消了</string>

    <string name="about">关于</string>
    <string name="version">版本信息</string>
    <string name="github">Github</string>
    <string name="gotoGithub">前往 GitHub</string>
    <string name="hide_ads">隐藏广告</string>
    <string name="display_ads">显示广告（用来捐赠开发者）</string>
    <string name="feedback">意见反馈</string>


    <string name="hide_ads_tip">确定要隐藏广告吗？</string>
    <string name="hided_ads">广告已被隐藏</string>

    <string name="ads_id" translatable="false">ca-app-pub-4066588899283566/1466780534</string>

    <!--设置-->
    <string name="launch">启动</string>
    <string name="clean_data">清除应用数据</string>
    <string name="clean_internal_cache">清楚外部缓存</string>
    <string name="clean_external_cache">清除内部缓存</string>
    <string name="clean_databases">清除数据库文件</string>
    <string name="clean_files">清楚内部文件</string>
    <string name="clean_sharedPreference">清除 SharedPreferences</string>
    <string name="md5">MD5</string>
    <string name="sha1">SHA1</string>
    <string name="hash_key">HashKey</string>
    <string name="open_setting">打开设置</string>
    <string name="save_apk">保存 APK</string>
    <string name="open_in_appstore">在应用商店打开</string>
    <string name="read_android_manifest">查看 AndroidManifest.xml</string>
    <string name="uninstall">卸载</string>

    <string name="detail_version">版本：%s</string>

    <!--AppDetail-->
    <string name="app_no_exit">应用不存在或者不能被启动</string>
</resources>
